[#494] Fixed layout problems

--- a/code/wp-content/themes/Akvo-responsive/css/main.scss
+++ b/code/wp-content/themes/Akvo-responsive/css/main.scss
@@ -3722,10 +3722,12 @@ section.inFivePoints li h3 {
 }
 
 .akvoIatiPag {
-    hgroup h1 {
-        height:55px;
-        background: url("../images/Akvo_IATI_logo_RGB_300px.png") center center no-repeat;
-        background-size:auto 50px;
+    hgroup {
+        h1 {
+            height:55px;
+            background: url("../images/Akvo_IATI_logo_RGB_300px.png") center center no-repeat;
+            background-size:auto 50px;
+        }
     }
     .descrTwoCol {
         img {
@@ -4550,6 +4552,7 @@ h1 {
     margin: 0em auto;
     @include noWrapTxt;
 }
+
 .dashData li h4 {
     color: inherit;
     font-size: 0.8em;
